--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -10,6 +10,7 @@ output, ruby, section, summary,time, mark, audio, video
     padding: 0
     border: 0
     vertical-align: baseline
+    box-sizing: border-box
 html
     -ms-text-size-adjust: 100%
     -webkit-text-size-adjust: 100%
