--- a/src/sass/components/_navigation.sass
+++ b/src/sass/components/_navigation.sass
@@ -4,14 +4,11 @@
 
 	&__item
 		width: 100%
-		svg
-			margin-left: 10px
-			width: 10px
-			height: 10px
 
 	&__link
 		display: flex
 		align-items: center
+		justify-content: flex-start
 		text-decoration: none
 		font-size: 20px
 		line-height: 32px
@@ -20,4 +17,26 @@
 			color: $accent
 			svg
 				fill: $accent
+
+		svg, img
+			color: $white
+			margin-right: 14px
+			min-width: 20px
+			width: 20px
+			height: 20px
+			&:last-child
+				width: 10px
+				height: 10px
+				margin-left: 10px
+				margin-right: 0
+
+		&.active
+			pointer-events: none
+			color: $accent
+			svg
+				fill: $accent
+				&:last-child
+					display: none
+
+
 
