--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -29,7 +29,7 @@ title: Home
           <div class="home-slider__action-right btn btn--accent">Buy now</div>
           <div class="home-slider__box">
             <div class="home-slider__title">WOW SUCH A PERFECT DUCK</div>
-            <img class="home-slider__img" src="/img/duck.svg"></img>
+            <img class="home-slider__img" src="./img/duck.svg"></img>
           </div>
         </div>
       </div>
@@ -53,14 +53,14 @@ title: Home
 
   </div>
 
-  <div class="home-slider__footer">
+  <a href="#homeMore" class="home-slider__footer">
     <div class="home-slider__footer-title">Explore more</div>
     <div class="home-slider__footer__icon">{{icon.i('arrow')}}</div>
-  </div>
+  </a>
 
 </div>
 
-<div class="home-layout">
+<div class="home-layout" id="homeMore">
   <div class="home-layout__container">
     <div class="home-layout__item-container home-layout__item-container--1 ">
       <a href="/item-view.html" class="home-layout__item">
