--- a/src/templates/item-view.html
+++ b/src/templates/item-view.html
@@ -29,7 +29,7 @@ title: Home
           <div class="home-slider__action-right btn btn--accent">Buy now</div>
           <div class="home-slider__box">
             <div class="home-slider__title">title title title title title title </div>
-            <img class="home-slider__img" src="/img/duck.svg"></img>
+            <img class="home-slider__img" src="./img/duck.svg"></img>
           </div>
         </div>
       </div>
