--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -23,7 +23,7 @@
         <div class="sidebar__container">
 
           <a href="/home.html" class="sidebar__logo">
-            <img src="/img/logo.svg" alt="" class="logo" />
+            <img src="./img/logo.svg" alt="" class="logo" />
             <div class="sidebar__logo-text">silverfox</div>
           </a>
 
