--- a/src/sass/partials/_home-slider.sass
+++ b/src/sass/partials/_home-slider.sass
@@ -5,7 +5,7 @@
 	font-family: $fa
 
 	&__container
-		height: 65vh
+		height: 67vh
 		width: 100%
 		display: flex
 		flex-direction: column
@@ -100,6 +100,7 @@
 
 	&__img
 		+rotate(-24)
+		min-height: 512px
 		svg
 			width: 100%
 			height: 100%
@@ -182,7 +183,7 @@
 			right: 40px
 
 	&__footer
-		height: 10vh
+		height: 8vh
 		display: flex
 		flex-direction: column
 		justify-content: center
