--- a/src/templates/partials/sidebar/_navigation.html
+++ b/src/templates/partials/sidebar/_navigation.html
@@ -6,7 +6,7 @@
 		<a href="/Blog.html" class="navigation__link">{{icon.i('blog')}} <span>Blog</span></a>
 	</div>
 	<div class="navigation__item">
-		<a href="/AboutUs.html" class="navigation__link"><img src="/img/logo.svg" alt="" class="logo" /> <span>About Us</span></a>
+		<a href="/AboutUs.html" class="navigation__link"><img src="./img/logo.svg" alt="" class="logo" /> <span>About Us</span></a>
 	</div>
 	<div class="navigation__item">
 		<a href="/contacts.html" class="navigation__link">{{icon.i('phone')}} <span>Contacts</span></a>
