--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,5 +2,6 @@
 @import "base/*.sass"
 @import "generated/*.sass"
 // @import "index/*.sass"
-@import "partials/*.sass"
 @import "components/*.sass"
+@import "partials/*.sass"
+@import "cards/*.sass"
