--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -194,19 +194,19 @@
       background-color: $colorHover
 
 
-@mixin materialShadow ($lvl, $hoverlvl)
+@mixin materialShadow ($lvl, $hoverlvl, $color: #000)
   position: relative
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
   @if $lvl == 1
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+    box-shadow: 0 1px 3px rgba($color, .12), 0 1px 2px rgba($color, .24)
   @else if $lvl == 2
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
+    box-shadow: 0 3px 6px rgba($color, .16), 0 3px 6px rgba($color, .23)
   @else if $lvl == 3
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+    box-shadow: 0 10px 20px rgba($color, .19), 0 6px 6px rgba($color, .23)
   @else if $lvl == 4
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+    box-shadow: 0 14px 28px rgba($color, .25), 0 10px 10px rgba($color, .22)
   @else if $lvl == 5
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
+    box-shadow: 0 19px 38px rgba($color, .30), 0 15px 12px rgba($color, .22)
   +h
     box-shadow: none
     &:after
@@ -220,15 +220,15 @@
     opacity: 0
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
     @if $hoverlvl == 1
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+      box-shadow: 0 1px 3px rgba($color, .12), 0 1px 2px rgba($color, .24)
     @else if $hoverlvl == 2
-      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
+      box-shadow: 0 3px 6px rgba($color, .16), 0 3px 6px rgba($color, .23)
     @else if $hoverlvl == 3
-      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+      box-shadow: 0 10px 20px rgba($color, .19), 0 6px 6px rgba($color, .23)
     @else if $hoverlvl == 4
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+      box-shadow: 0 14px 28px rgba($color, .25), 0 10px 10px rgba($color, .22)
     @else if $hoverlvl == 5
-      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
+      box-shadow: 0 19px 38px rgba($color, .30), 0 15px 12px rgba($color, .22)
 
 @mixin checkbox($size: '14px', $selectedsize: '6px', $color: $accent, $rounded: rounded)
   display: flex
@@ -332,3 +332,23 @@
     content: ""
     +coverdiv
     background-color: rgba($color, $transparency)
+
+=backgrounds($c, $y)
+  background: $c
+
+  @for $i from 1 through $y
+    $k: 3%
+    $j: $i - 1
+
+    @if $i == 1
+      &:nth-child(#{$i})
+        background: $c
+        background: rgb(random(255), random(255), random(255))
+    @else
+      &:nth-child(#{$i})
+        background: darken($c, $k * $j)
+        background: rgb(random(255), random(255), random(255))
+
+@mixin linearGradient($color2, $color1, $direction: left)
+  background: $color1
+  background: linear-gradient(to $direction, $color1 0%, $color2 100%)
