--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -34,11 +34,10 @@
 		position: relative
 		color: #000
 
-
 	&__content-container
 		display: flex
 		flex-wrap: wrap
-		padding: 20px 20px
+		padding: 20px 0
 
 	&__content-header
 		width: 100%
@@ -47,7 +46,7 @@
 		flex-direction: column
 		justify-content: center
 		align-items: center
-		margin-bottom: 20px
+		margin: 0 20px 20px
 		border: 1px solid $black
 
 	&__content-title
