--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -1,37 +1,57 @@
+$btnHeight: 36px
 .btn
+	box-sizing: border-box
 	display: flex
 	align-items: center
 	justify-content: center
-	border-radius: 50px
-	height: 50px
-	padding: 0 24px
-	color: $accent
-	line-height: 50px
+	height: $btnHeight
+	padding: 10px 10px
+	border: 1px solid $black
+	color: $black
 	font-family: $fd
+	font-size: 14px
+	line-height: $btnHeight
+	text-align: center
 	white-space: nowrap
 	font-weight: 700
-	box-shadow: 0 0 10px 1px rgba($accent, 0.25), inset 0 0 0px 2px rgba($accent, 0.75)
 	+tr
 	+h
 		cursor: pointer
-		box-shadow: 0 0 10px 1px rgba($accent, 0.55), inset 0 0 0px 2px rgba($accent, 1)
+		border-color: $accent
+		color: $accent
+		svg
+			fill: $accent
 
 	svg
-		width: 22px
-		height: 22px
-		fill: $accent
+		width: 14px
+		height: 14px
+		min-width: 14px
+		fill: $black
 		margin-right: 14px
+		+tr
+
+	&--accent
+		background-color: $accent
+		border-color: $accent
+		color: $white
+		svg
+			fill: $white
+		+h
+			border-color: $accent
+			color: $white
+			box-shadow: 0 7px 12px 1px rgba($accent, 0.25)
+			svg
+				fill: $white
+
+	&--small
+		width: $btnHeight
+		min-width: $btnHeight
+		max-width: $btnHeight
+		padding: 0
+		svg
+			margin-right: 0
 
 	&--disabled
 		pointer-events: none
 		filter: grayscale(100%)
-
-	&--accent
-		background-color: $accent
-		color: $white
-		box-shadow: 0 0 25px 1px rgba($accent, 0.55)
-		+h
-			box-shadow: 0 0 25px 1px rgba($accent, 0.75)
-		svg
-			fill: $white
 
