--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -7,53 +7,226 @@ title: Catalog
 
 
 <div class="layout__content-container">
-  <div class="layout__content-header">
-    <div class="layout__content-title">{{ title }}</div>
-    <div class="layout__breadcrumbs breadcrumbs">
-      <a href="/home.html">Home</a>
-      <span> {{ title }}</span>
-    </div>
-  </div>
+	<div class="layout__content-header">
+		<div class="layout__content-title">{{ title }}</div>
+		<div class="layout__breadcrumbs breadcrumbs">
+			<a href="/home.html">Home</a>
+			<span> {{ title }}</span>
+		</div>
+	</div>
 
 
 
-  <div class="catalog">
+	<div class="catalog">
 
-    <div class="catalog__header">
-      <div class="catalog__header-slider">
+		<div class="catalog__header">
+			<div class="catalog__header-slider">
 
-        <div class="catalog__header-item">
-          <div class="catalog__header-item-box">
-            <div class="catalog__header-label">new</div>
-            <div class="catalog__header-category">Category</div>
-            <div class="catalog__header-title">Title</div>
-            <div class="catalog__header-action">Add to cart</div>
-            <div class="catalog__header-action">Buy</div>
-          </div>
-          <div class="catalog__header-img">{{icon.i('duck')}}</div>
-        </div>
+				<div class="catalog__header-item">
+					<div class="catalog__header-item-box">
+						<div class="catalog__header-label">new</div>
+						<div class="catalog__header-title--container">
+							<div class="catalog__header-category">Category</div>
+							<div class="catalog__header-title">Title</div>
+						</div>
+						<div class="catalog__header-actions">
+							<div class="catalog__header-action btn">Add to cart</div>
+							<div class="catalog__header-action btn btn--accent">Buy</div>
+						</div>
+					</div>
+					<div class="catalog__header-img">{{icon.i('duck')}}</div>
+				</div>
 
-        <div class="catalog__header-item">
-          <div class="catalog__header-item-box">
-            <div class="catalog__header-label"></div>
-            <div class="catalog__header-category"></div>
-            <div class="catalog__header-title"></div>
-            <div class="catalog__header-action"></div>
-          </div>
-          <div class="catalog__header-img"></div>
-        </div>
+				<div class="catalog__header-item catalog__header-item--small ">
+					<div class="catalog__header-item-box">
+						<div class="catalog__header-label">new</div>
+						<div class="catalog__header-title--container">
+							<div class="catalog__header-category">Category</div>
+							<div class="catalog__header-title">Title</div>
+						</div>
+						<div class="catalog__header-actions">
+							<div class="catalog__header-action btn">Add to cart</div>
+							<div class="catalog__header-action btn btn--accent">Buy</div>
+						</div>
+					</div>
+					<div class="catalog__header-img">{{icon.i('duck')}}</div>
+				</div>
 
-      </div>
-    </div>
+			</div>
+		</div>
 
-    <div class="catalog__content">
-      <div class="catalog__sidebar">
+		<div class="catalog__layout">
+			<div class="catalog__sidebar">
 
-      </div>
-      <div class="catalog__content"></div>
-    </div>
-  </div>
-</div>
+				<div class="filters">
 
-{% endblock %}
+					<div class="filters__head">
+						<div class="filters__head-title">Filter</div>
+						<div class="filters__head-icon">{{icon.i('reload')}}</div>
+					</div>
+
+					<div class="filters__item js-filter-toggler active">
+						<div class="filters__title">
+							<div class="filters__title-icon">{{icon.i('arrow')}}</div>
+							<div class="filters__title-text">Categories</div>
+							<div class="filters__title-icon">{{icon.i('cross')}}</div>
+						</div>
+
+						<div class="filters__content">
+							<div class="filters__list">
+								<div class="filters__list-item">
+									<div class="filters__list-item-title">Category</div>
+									<div class="filters__list-item-count">3</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="filters__item js-filter-toggler">
+						<div class="filters__title">
+							<div class="filters__title-icon">{{icon.i('arrow')}}</div>
+							<div class="filters__title-text">Price</div>
+							<div class="filters__title-icon">{{icon.i('cross')}}</div>
+						</div>
+
+						<div class="filters__content">
+							<div class="filters__price">
+								<div class="filters__price-box">
+									<input type="text" class="filters__price-input" value="100" />
+									<input type="text" class="filters__price-input" value="10000" />
+								</div>
+								<div class="filters__price-slider">
+									<div class="filters__price-slider-thingie filters__price-slider-thingie--left"></div>
+									<div class="filters__price-slider-thingie filters__price-slider-thingie--right"></div>
+									<div class="filters__price-slider-active"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="filters__item js-filter-toggler">
+						<div class="filters__title">
+							<div class="filters__title-icon">{{icon.i('arrow')}}</div>
+							<div class="filters__title-text">Color</div>
+							<div class="filters__title-icon">{{icon.i('cross')}}</div>
+						</div>
+
+						<div class="filters__content">
+							<div class="filters__list filters__list--wrap">
+								{% for page in range(1, 25) %}
+								<div class="filters__list-item filters__list-item--small filters__list-item--colors js-make-active">
+									{{icon.i('check')}}
+								</div>
+								{% endfor %}
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="catalog__content">
+				<div class="catalog-filters">
+					<div class="catalog-filters__item">
+						<div class="catalog-filters__title">sort by: </div>
+						<div class="catalog-filters__value">price descending</div>
+						<div class="catalog-filters__icon">{{icon.i('arrow')}}</div>
+						<div class="catalog-filters__dropdown">
+							{% for page in range(1, 25) %}
+							<div class="catalog-filters__dropdown-item">
+								<span>ascending</span>
+								{{icon.i('arrow')}}
+							</div>
+							{% endfor %}
+						</div>
+					</div>
+					<div class="catalog-filters__item">
+						<div class="catalog-filters__title">sort by: </div>
+						<div class="catalog-filters__value">price descending</div>
+						<div class="catalog-filters__icon">{{icon.i('arrow')}}</div>
+						<div class="catalog-filters__dropdown">
+							{% for page in range(1, 25) %}
+							<div class="catalog-filters__dropdown-item">
+								<span>ascending</span>
+								{{icon.i('arrow')}}
+							</div>
+							{% endfor %}
+						</div>
+					</div>
+					<div class="catalog-filters__item">
+						<div class="catalog-filters__subitem">
+							{{icon.i('list-3')}}
+						</div>
+						<div class="catalog-filters__subitem">
+							{{icon.i('list-9')}}
+						</div>
+						<div class="catalog-filters__subitem catalog-filters__subitem--large">
+							<div class="catalog-filters__title">compare</div>
+							<div class="catalog-filters__counter">3</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="catalog__content-list">
+					<!-- <div class="catalog__content-item catalog__content-item--list"> -->
+						{% for page in range(1, 12) %}
+						<div class="catalog__content-item">
+							<div class="card-catalog-item">
+								<div class="card-catalog-item__container">
+									<div class="card-catalog-item__label">new</div>
+									<div class="card-catalog-item__title">Category</div>
+
+									<img src="./img/img.png" alt="" class="card-catalog-item__img" />
+									<div class="card-catalog-item__actions-container">
+										<div class="card-catalog-item__actions">
+											<div class="card-catalog-item__action btn">{{icon.i('cart')}} <span>To cart</span></div>
+											<div class="card-catalog-item__action btn btn--small">{{icon.i('duck')}}</div>
+											<div class="card-catalog-item__action btn btn--small">{{icon.i('duck')}}</div>
+										</div>
+										<div class="card-catalog-item__actions">
+											<div class="card-catalog-item__accent btn btn--accent">{{icon.i('cart')}} <span>Buy now</span></div>
+										</div>
+									</div>
+									<div class="f fdc">
+										<div class="card-catalog-item__title">Title</div>
+										<div class="card-catalog-item__price">99$</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						{% endfor %}
+
+						<div class="catalog__content-item">
+							<div class="card-catalog-item card-catalog-item--last">
+								<div class="card-catalog-item__container">
+									{{icon.i('reload')}}
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="catalog__content-pager">
+						<div class="catalog__content-pager-item">first</div>
+
+						<div class="f">
+							<div class="catalog__content-pager-item prev">{{icon.i('arrow')}}</div>
+							<div class="catalog__content-pager-item active">1</div>
+							<div class="catalog__content-pager-item">2</div>
+							<div class="catalog__content-pager-item">...</div>
+							<div class="catalog__content-pager-item">75</div>
+							<div class="catalog__content-pager-item">76</div>
+							<div class="catalog__content-pager-item">{{icon.i('arrow')}}</div>
+						</div>
+
+						<div class="catalog__content-pager-item">last</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	{% endblock %}
 
