--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,7 +1,8 @@
 @import "helpers/*.sass"
 @import "base/*.sass"
 @import "generated/*.sass"
-// @import "index/*.sass"
+
+@import "pages/*.sass"
 @import "components/*.sass"
 @import "partials/*.sass"
 @import "cards/*.sass"
