--- a/src/sass/cards/_card-catalog-item.sass
+++ b/src/sass/cards/_card-catalog-item.sass
@@ -64,6 +64,10 @@
 		pointer-events: none
 		+tr
 
+	&__box
+		display: flex
+		flex-direction: column
+
 	&__title
 		color: $black
 		font-size: 24px
