--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -16,6 +16,7 @@
 <body>
 
   {% include "layouts/_help-block.html" %}
+  {% include "partials/_check18.html" %}
 
 
   <div class="layout">
@@ -49,6 +50,7 @@
     </div>
 
     {% set popupName = "catalog" %}{% include "partials/popup/_catalog.html" %}
+    {% set popupName = "cabinet" %}{% include "partials/popup/_cabinet.html" %}
 
   </div>
 
