--- a/src/templates/partials/sidebar/_user.html
+++ b/src/templates/partials/sidebar/_user.html
@@ -1,4 +1,4 @@
-<div class="user">
+<div class="user" data-popup="cabinet">
 	<div class="user__avatar">N</div>
 	<div class="user__name">Nevejestvo</div>
 	<div class="user__icon">{{icon.i('balance')}}</div>
