--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -44,8 +44,9 @@ table
     width: 100%
 html
     box-sizing: border-box
+
 *, *:before, *:after
-    box-sizing: inherit
+    box-sizing: border-box
 
 a
     text-decoration: none
