--- a/src/sass/partials/_home-layout.sass
+++ b/src/sass/partials/_home-layout.sass
@@ -30,7 +30,6 @@
 		height: 100%
 		box-shadow: inset 0 0 0 1px $accent
 		position: relative
-
 		+h
 			cursor: pointer
 			.home-layout__title
@@ -41,10 +40,6 @@
 			.home-layout__label
 				svg
 					fill: $white
-
-
-	svg
-		+tr
 
 	&__label
 		display: flex
@@ -97,3 +92,8 @@
 		+coverdiv
 		+coverimg
 		+scale(0.8)
+		color: $accent
+
+	svg
+		+tr
+
