--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -10,7 +10,7 @@ title: Blog
 	<div class="layout__content-header">
 		<div class="layout__content-title">{{ title }}</div>
 		<div class="layout__breadcrumbs breadcrumbs">
-			<a href="/home.html">Home</a>
+			<a href="home.html">Home</a>
 			<span> {{ title }}</span>
 		</div>
 	</div>
@@ -76,7 +76,7 @@ title: Blog
 								<div class="card-blog__info-text">Date: 25.01.2005</div>
 							</div>
 						</div>
-						<a href="/blog-view.html" class="card-blog__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+						<a href="blog-view.html" class="card-blog__title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
 						<div class="card-blog__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam impedit modi commodi atque porro! Libero voluptates quae doloremque illum laborum sunt harum ex reiciendis, perspiciatis suscipit fugit assumenda ratione, possimus cumque natus ut atque aliquid voluptatibus at. Cupiditate repudiandae perferendis magnam iure distinctio illum quas, aliquam, sequi hic, eveniet quae.</div>
 						<div class="card-blog__author-container">
 							<div class="card-blog__author-avatar">
@@ -86,7 +86,7 @@ title: Blog
 								<div class="card-blog__author-text">Author</div>
 								<div class="card-blog__author-name">Nevejestvo</div>
 							</div>
-							<a href="/blog-view.html" class="card-blog__action btn">Read more</a>
+							<a href="blog-view.html" class="card-blog__action btn">Read more</a>
 						</div>
 					</div>
 				</div>
