--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -23,7 +23,7 @@ title: Home
           </div>
           <div class="home-slider__label">new</div>
           <div class="home-slider__action-left">
-            <a href="/item-view.html" class="home-slider__action btn">More info</a>
+            <a href="item-view.html" class="home-slider__action btn">More info</a>
             <div class="home-slider__action btn">{{icon.i('cart')}} Add to cart </div>
           </div>
           <div class="home-slider__action-right btn btn--accent">Buy now</div>
@@ -63,7 +63,7 @@ title: Home
 <div class="home-layout" id="homeMore">
   <div class="home-layout__container">
     <div class="home-layout__item-container home-layout__item-container--1 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('duck')}} discount</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
@@ -76,7 +76,7 @@ title: Home
 
     {% for page in range(0, 2) %}
     <div class="home-layout__item-container home-layout__item-container--2 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('blog')}} blog</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">The perfect history of a perfect duck</div>
@@ -89,7 +89,7 @@ title: Home
 
     {% for page in range(0, 3) %}
     <div class="home-layout__item-container home-layout__item-container--3 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('catalog')}} sale</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
@@ -103,7 +103,7 @@ title: Home
 
     {% for page in range(0, 4) %}
     <div class="home-layout__item-container home-layout__item-container--4 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('catalog')}} random item</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
@@ -117,7 +117,7 @@ title: Home
 
     {% for page in range(0, 2) %}
     <div class="home-layout__item-container home-layout__item-container--2 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('blog')}} blog</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">The perfect history of a perfect duck</div>
@@ -131,7 +131,7 @@ title: Home
 
     {% for page in range(0, 3) %}
     <div class="home-layout__item-container home-layout__item-container--3 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('catalog')}} sale</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
@@ -144,7 +144,7 @@ title: Home
     {% endfor %}
 
     <div class="home-layout__item-container home-layout__item-container--1 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('duck')}} discount</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
@@ -157,7 +157,7 @@ title: Home
 
     {% for page in range(0, 4) %}
     <div class="home-layout__item-container home-layout__item-container--4 ">
-      <a href="/item-view.html" class="home-layout__item">
+      <a href="item-view.html" class="home-layout__item">
         <div class="home-layout__label">{{icon.i('catalog')}} random item</div>
         <div class="home-layout__title-container">
           <div class="home-layout__title home-layout__title--big">Item name</div>
