--- a/src/templates/item-view.html
+++ b/src/templates/item-view.html
@@ -23,7 +23,7 @@ title: Home
           </div>
           <div class="home-slider__label">new</div>
           <div class="home-slider__action-left">
-            <a href="/item-view.html" class="home-slider__action btn">More info</a>
+            <a href="item-view.html" class="home-slider__action btn">More info</a>
             <div class="home-slider__action btn">{{icon.i('cart')}} Add to cart </div>
           </div>
           <div class="home-slider__action-right btn btn--accent">Buy now</div>
