--- a/src/templates/partials/sidebar/_navigation.html
+++ b/src/templates/partials/sidebar/_navigation.html
@@ -1,18 +1,18 @@
 <div class="navigation">
 	<div class="navigation__item js-popup-onhover" data-popup="catalog">
-		<a href="/Catalog.html" class="navigation__link">{{icon.i('catalog')}} Catalog {{icon.i('arrow')}}</a>
+		<a href="Catalog.html" class="navigation__link">{{icon.i('catalog')}} Catalog {{icon.i('arrow')}}</a>
 	</div>
 	<div class="navigation__item">
-		<a href="/Blog.html" class="navigation__link">{{icon.i('blog')}} <span>Blog</span></a>
+		<a href="Blog.html" class="navigation__link">{{icon.i('blog')}} <span>Blog</span></a>
 	</div>
 	<div class="navigation__item">
-		<a href="/AboutUs.html" class="navigation__link"><img src="./img/logo.svg" alt="" class="logo" /> <span>About Us</span></a>
+		<a href="AboutUs.html" class="navigation__link"><img src="./img/logo.svg" alt="" class="logo" /> <span>About Us</span></a>
 	</div>
 	<div class="navigation__item">
-		<a href="/contacts.html" class="navigation__link">{{icon.i('phone')}} <span>Contacts</span></a>
+		<a href="contacts.html" class="navigation__link">{{icon.i('phone')}} <span>Contacts</span></a>
 	</div>
 	<div class="navigation__item">
 	</div>
-		<a href="/Delivery.html" class="navigation__link">{{icon.i('delivery')}} <span>Delivery</span></a>
+		<a href="Delivery.html" class="navigation__link">{{icon.i('delivery')}} <span>Delivery</span></a>
 </div>
 
