--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -10,7 +10,7 @@ title: Catalog
 	<div class="layout__content-header">
 		<div class="layout__content-title">{{ title }}</div>
 		<div class="layout__breadcrumbs breadcrumbs">
-			<a href="/home.html">Home</a>
+			<a href="home.html">Home</a>
 			<span> {{ title }}</span>
 		</div>
 	</div>
