--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -59,7 +59,7 @@ title: Blog
 			{% for page in range(1, 5) %}
 			<div class="blog__item">
 				<div class="card-blog">
-					<a class="card-blog__img-container" href="/blog-view.html">
+					<a class="card-blog__img-container" href="blog-view.html">
 						<img class="card-blog__img" src="./img/space.jpg"></img>
 					</a>
 					<div class="card-blog__box">
