--- a/src/sass/helpers/_flex.sass
+++ b/src/sass/helpers/_flex.sass
@@ -34,7 +34,9 @@
 	color: #FFF
 	z-index: 1000
 	transition: all 150ms
+	opacity: 0
 	&:hover
+		opacity: 1
 		.help-block__container
 			transform: translate(0)
 			z-index: 999
