--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -158,7 +158,7 @@ title: Catalog
 						<div class="catalog-filters__subitem js-catalog-switcher" data-catalog-type="list">
 							{{icon.i('list-3')}}
 						</div>
-						<div class="catalog-filters__subitem js-catalog-switcher" data-catalog-type="grid">
+						<div class="catalog-filters__subitem js-catalog-switcher active" data-catalog-type="grid">
 							{{icon.i('list-9')}}
 						</div>
 						<div class="catalog-filters__subitem catalog-filters__subitem--large">
@@ -175,7 +175,7 @@ title: Catalog
 							<div class="card-catalog-item">
 								<div class="card-catalog-item__container">
 									<div class="card-catalog-item__label">new</div>
-									<div class="card-catalog-item__title">Category</div>
+									<div class="card-catalog-item__title card-catalog-item__title--category">Category</div>
 
 									<img src="./img/img.png" alt="" class="card-catalog-item__img" />
 									<div class="card-catalog-item__actions-container">
@@ -189,7 +189,7 @@ title: Catalog
 										</div>
 									</div>
 									<div class="card-catalog-item__box">
-										<div class="card-catalog-item__title">Title</div>
+										<div class="card-catalog-item__title">Perfect item title</div>
 										<div class="card-catalog-item__price">99$</div>
 									</div>
 								</div>
