--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -50,7 +50,7 @@
     </div>
 
     {% set popupName = "catalog" %}{% include "partials/popup/_catalog.html" %}
-    {% set popupName = "cabinet" %}{% include "partials/popup/_cabinet.html" %}
+    {% set popupName = "cart" %}{% include "partials/popup/_cart.html" %}
 
   </div>
 
