--- a/src/sass/cards/_card-catalog-item.sass
+++ b/src/sass/cards/_card-catalog-item.sass
@@ -17,6 +17,8 @@
 			color: $white
 			svg
 				fill: $white
+		svg
+			fill: $white
 
 		&:before
 			opacity: 1
@@ -31,9 +33,15 @@
 		+tr
 
 	&--last
-		display: flex
-		align-items: center
-		justify-content: center
+		+h
+			cursor: pointer
+		.card-catalog-item__container
+			display: flex
+			align-items: center
+			justify-content: center
+		svg
+			width: 50px
+			height: 50px
 
 	&__container
 		+coverdiv
@@ -45,35 +53,48 @@
 
 	&__label
 		position: absolute
-		right: 15px
-		top: 15px
-		padding: 4px
+		right: 0
+		top: 0
+		padding: 4px 6px
+		font-family: $fa
+		font-size: 12px
+		+ls(50)
+		font-weight: 700
 		background-color: $black
-		color: #FFF
+		color: $white
+		text-transform: uppercase
 
 	&__img
-		width: calc(100% - 20px)
+		width: calc(100% - 30px)
 		object-fit: contain
 		height: auto
 		position: absolute
 		top: 0
-		left: 10px
-		right: 10px
+		left: 15px
+		right: 15px
 		bottom: 0
 		margin: auto 0
 		pointer-events: none
 		+tr
 
 	&__box
+		width: 100%
 		display: flex
-		flex-direction: column
+		justify-content: space-between
+		align-items: flex-end
 
 	&__title
 		color: $black
-		font-size: 24px
+		font-size: 18px
+		font-family: $fc
 		+tr
+		&--category
+			font-size: 20px
+			text-transform: uppercase
 
 	&__price
+		font-family: $fc
+		font-size: 22px
 		+tr
 
 	&__actions-container
