--- a/src/templates/partials/sidebar/_cart.html
+++ b/src/templates/partials/sidebar/_cart.html
@@ -1,4 +1,4 @@
-<div class="cart">
+<div class="cart js-popup-onhover" data-popup="cart">
 	<div class="cart__icon">{{icon.i('cart')}}</div>
 	<div class="cart__info">3 items</div>
 	<div class="cart__price">99$</div>
