--- a/src/templates/partials/sidebar/_user.html
+++ b/src/templates/partials/sidebar/_user.html
@@ -1,6 +1,7 @@
-<div class="user" data-popup="cabinet">
+<!-- <div class="user" data-popup="cabinet"> -->
+<div class="user">
 	<div class="user__avatar">N</div>
-	<div class="user__name">Nevejestvo</div>
+	<a href="cabinet.html" class="user__name">Nevejestvo</a>
 	<div class="user__icon">{{icon.i('balance')}}</div>
 	<div class="user__icon">{{icon.i('heart')}}</div>
 </div>
